unpackaged/main/default/objects/JustCall_Call__c/JustCall_Call__c.object-meta.xml
<CustomObject>
    <label>JustCall Call</label>
    <nameField>
        <label>JustCall Call Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JustCall Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>