unpackaged/main/default/objects/JustCall_Call__c/fields/Called_at__c.field-meta.xml
<CustomField>
    <fullName>Called_at__c</fullName>
    <label>Called at</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>