unpackaged/main/default/objects/JustCall_Call__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <formula>Duration__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (Minutes)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>