unpackaged/main/default/objects/JustCall_Call__c/fields/JustCall_Id__c.field-meta.xml
<CustomField>
    <fullName>JustCall_Id__c</fullName>
    <externalId>true</externalId>
    <label>JustCall Id</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>