unpackaged/main/default/objects/JustCall_Call__c/fields/Number_called__c.field-meta.xml
<CustomField>
    <fullName>Number_called__c</fullName>
    <label>Number called</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>