unpackaged/main/default/objects/JustCall_Call__c/fields/Rep__c.field-meta.xml
<CustomField>
    <fullName>Rep__c</fullName>
    <label>Rep</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>